[gd_scene load_steps=4 format=3 uid="uid://c2wrie3jwwtph"]

[ext_resource type="Script" uid="uid://d33uaedjbfjif" path="res://test_vboxcontainer.gd" id="1_6bsqv"]
[ext_resource type="Texture2D" uid="uid://b3lqhqhreqp7r" path="res://fresa.jpg" id="2_nl808"]
[ext_resource type="Texture2D" uid="uid://daetidc5un8vy" path="res://manzana.jpg" id="3_gfybi"]

[node name="UI_Avatars" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6bsqv")

[node name="Avatar1" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1152.0
texture = ExtResource("2_nl808")
expand_mode = 3

[node name="info1" type="Label" parent="."]
layout_mode = 1
offset_right = 1.0
offset_bottom = 23.0
text = "info1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="score1" type="Label" parent="."]
layout_mode = 2
offset_top = 31.0
offset_right = 1152.0
offset_bottom = 80.0
text = "score1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Avatar2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
pivot_offset = Vector2(-100, 20)
texture = ExtResource("3_gfybi")
expand_mode = 3

[node name="info2" type="Label" parent="."]
layout_mode = 2
offset_top = 4.0
offset_right = 1152.0
offset_bottom = 27.0
text = "info2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="score2" type="Label" parent="."]
layout_mode = 2
offset_top = 31.0
offset_right = 1152.0
offset_bottom = 54.0
text = "score2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Avatar3" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
texture = ExtResource("2_nl808")
expand_mode = 3

[node name="info3" type="Label" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 23.0
text = "info3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="score3" type="Label" parent="."]
layout_mode = 0
offset_top = 31.0
offset_right = 1152.0
offset_bottom = 80.0
text = "score3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Avatar4" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(-100, 20)
texture = ExtResource("3_gfybi")
expand_mode = 3

[node name="info4" type="Label" parent="."]
layout_mode = 0
offset_top = 4.0
offset_right = 1152.0
offset_bottom = 27.0
text = "info4"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="score4" type="Label" parent="."]
layout_mode = 0
offset_top = 31.0
offset_right = 1152.0
offset_bottom = 54.0
text = "score4"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 162
